# learning-cuda

./: .gitignore  CMakeLists.txt  README.md
common/: cuda_utils.cuh
exercises/: CMakeLists.txt
exercises/matmul/: bench_matmul.cu  matmul.cuh  test_matmul.cu
exercises/vecadd/: bench_vecadd.cu  test_vecadd.cu  vecadd.cuh
